import "DataChunk.proto";

option java_outer_classname="ReadQueryResponseProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message ReadQueryResponse 
{
    optional DataChunk dataChunk = 1;
}
